# llm-eval-drift-radar

./: .gitattributes  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
examples/: baseline.csv  baseline.jsonl  current.csv  current.jsonl  thresholds.json
src/llm_eval_drift_radar/: __init__.py  cli.py  core.py  reporting.py
tests/: test_core.py  test_reporting_cli.py
