[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "llm-eval-drift-radar"
version = "0.1.0"
description = "Compare LLM eval runs and report regressions, drift, model changes, and CI-ready results."
readme = "README.md"
requires-python = ">=3.9"
license = { file = "LICENSE" }
authors = [
  { name = "llm-eval-drift-radar contributors" }
]
keywords = ["llm", "evals", "ci", "developer-tools", "regression-testing", "ai"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Topic :: Software Development :: Quality Assurance",
  "Topic :: Utilities"
]
dependencies = []

[project.scripts]
llm-eval-drift-radar = "llm_eval_drift_radar.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
